--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ beautifulsoup4==4.11.2
 colorama==0.4.6
 Django==3.2.16
 django-bootstrap5==22.2
+django-stubs==5.1.3
+django-stubs-ext==5.1.3
 Faker==12.0.1
 flake8==5.0.4
 flake8-docstrings==1.7.0
@@ -27,5 +29,6 @@ snowballstemmer==2.2.0
 soupsieve==2.6
 sqlparse==0.4.3
 tomli==2.0.1
+types-PyYAML==6.0.12.20250326
 typing_extensions==4.12.2
 yapf==0.32.0
